<resources>
    <string name="app_name">ArrhythmiApp</string>
    <string name="login__login_button">Iniciar sesion</string>
    <string name="login__signup_button">Registrarme</string>
    <string name="login__password_recovery_button">Recuperar contraseña</string>
    <string name="login__email_hint">Correo electronico</string>
    <string name="login__password_hint">Contraseña</string>
    <string name="login__signup_header">Registrarse</string>
    <string name="login__password_recovery_header">¿Olvidaste tu contraseña?</string>
    <string name="dialog__add_note_header">Ingrese los datos</string>
    <string name="dialog__systolic_hint">Sistólica</string>
    <string name="dialog__diastolic_hint">Diastólica</string>
    <string name="dialog__pulse_hint">Pulso</string>
    <string name="dialog__note_hint">Nota</string>
    <string name="dialog__add_note_button">Agregar</string>
    <string name="home__date_text">Fecha</string>
    <string name="home__systolic_text">Sistólica</string>
    <string name="home__diastolic_text">Diastólica</string>
    <string name="home__pulse_text">Pulso</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>