<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.home.HomeFragment">

    <TableLayout
        android:id="@+id/tlHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/textView92"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textSize="20dp" />

            <ImageView
                android:id="@+id/imageUserNav"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/logo" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/tlPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_table"
        android:backgroundTint="@color/blue"
        android:paddingTop="20dp"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tlHeader"
        tools:ignore="MissingConstraints">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Hipotención < (100 - 120) < Hipertención -->
            <TextView
                android:id="@+id/sistolica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="120"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <!-- Hipotención < (70 - 90) < Hipertención -->
            <TextView
                android:id="@+id/diastolica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="80"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <!-- Bradricardia < (60 - 100) < Taquicardia -->
            <TextView
                android:id="@+id/pulso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="60"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtSistolica"
                android:layout_width="59dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/home__systolic_text"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtDiastolica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/home__diastolic_text"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtPulso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/home__pulse_text"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_table"
        android:backgroundTint="@color/gray"
        android:stretchColumns="1,2,3,4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tlPanel">

        <TableRow>

            <TextView
                android:layout_column="1"
                android:layout_marginHorizontal="30dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/home__date_text"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_column="1"
                android:layout_marginStart="11dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/home__systolic_text"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_column="1"
                android:layout_marginStart="-10dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/home__diastolic_text"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_column="1"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/home__pulse_text"
                android:textSize="16sp"
                android:textStyle="bold" />
        </TableRow>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvHeartData"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="5"
            tools:listitem="@layout/item_heart_data" />

    </TableLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/bAddHeartData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_add"
        android:backgroundTint="@color/purple_700"
        app:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>